# proyecto_final

./: .gitattributes  .gitignore  Dashboard_Final.pbix  README.md  mlflow.db  pyproject.toml  requirements.txt
02_preparation/: EDA_and_data_prep_for_models.ipynb  data_cleaning.ipynb
03_datasets/: test_data_prepared.csv  test_dataset_base.csv  train_data_prepared.csv  train_dataset_base.csv  val_data_prepared.csv  val_dataset_base.csv
04_dl_notebooks/: Modelo_DeepLearning_Alquiler.ipynb  Modelo_DeepLearning_Compras.ipynb
05_ml_notebooks/: ML_RandomForest_&_XGBoost_Buy_Model.ipynb  ML_RandomForest_&_XGBoost_Rent_Model.ipynb
06_ai_assistant/: app.py
Documentacion/: .~lock.PRESENTACION.pptx#  Dashboard.pbix
ai_assistant/: app.py
mlruns/708739769633530405/: meta.yaml
mlruns/708739769633530405/0a9b06e3c3a946db984c51a5b20a9072/: meta.yaml
mlruns/708739769633530405/0a9b06e3c3a946db984c51a5b20a9072/metrics/: MAE  R2
mlruns/708739769633530405/0a9b06e3c3a946db984c51a5b20a9072/tags/: mlflow.runName
mlruns/708739769633530405/0d37db62e4354a7d8f00a6ea5c9e8cb6/: meta.yaml
mlruns/708739769633530405/46a5f787d77d480ea36a034fb916b43a/: meta.yaml
mlruns/708739769633530405/6e2878e5691e4cfb827d5347cd5e6ecd/: meta.yaml
mlruns/models/buy_model/: meta.yaml
mlruns/models/buy_model/version-1/: meta.yaml
mlruns/models/rent_model/: meta.yaml
models/: buy_model_ML.joblib  modelo_alquiler_dl.keras  modelo_compra_definitivo.keras  modelo_compras_dl.keras  models_log.csv  rent_model_ML.joblib
tools/: model_selector.py  preprocessing.py  preprocessor.joblib
(+46 files in other folders)
